tests/fixtures/invalid/pow_float_int_float.py
# Cannot call pow() with Float, Int, Float
x = pow(1.0, 1, 1.0)
